# ollama-models-with-api

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
