[project]
name = "ai-council"
version = "0.1.0"
description = ""
authors = [
    {name = "Antoni Zgajewski",email = "antek004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.124.0,<0.125.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "transformers (>=4.46.3,<5.0.0)",
    "torch (>=2.5.1,<3.0.0)",
    "accelerate (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
